# bebop_uav

./: getGrey.py  imageProcessing_UAV.py  oas.sh
src _20200505/bebop2/: CMakeLists.txt  getGrey.py  package.xml
src _20200505/bebop2/include/: gps_controller.h  keyboard.h  yaw_controller.h
src _20200505/bebop2/launch/: main (copy).launch  position.launch  rawtogrey.launch  test.launch
src _20200505/bebop2/msg/: YawCmd.msg  lq.msg
src _20200505/bebop2/scripts/: (copy)depth_trans.py  depth_trans.py  listener.py  rostest.py  sc-sfm (复件).py  sc-sfm.py  talker.py  test.py
src _20200505/bebop2/src/: gps_controller.cpp  image_bebop2_node.cpp  main.cpp  rawtogrey.cpp  retinex.cpp
src _20200505/bebop2/src/turnLeftandRight/: gps_controller.cpp  image_bebop2_node.cpp
src/bebop2/: CMakeLists.txt  bebop_param.txt
src/bebop2/include/: YawQuat.h  gps_controller.h  yaw_controller.h
src/bebop2/launch/: image_bebop2_node.launch  main.launch  position.launch
src/bebop2/scripts/: depth_trans.py  sc-sfm.py  sot_track.py
src/bebop2/src/: gps_bebop2_node.cpp  gps_controller.cpp  image_bebop2_node (copy).cpp  image_bebop2_node.cpp  keyboard.cpp  main.cpp
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/src/: add_two_ints_client.cpp   add_two_ints_server.cpp
